# apkscan

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
secret-patterns/: all.yaml  all_secret_locators.json  default.json  formatter.py  gitleaks.toml  test.json  test.yaml
src/apk_secret_scanner/: __init__.py  _version.py  apk_secret_scanner.py  cli.py  concurrent_executor.py  decompiler.py  main.py  secret_scanner.py
src/apkscan/: __init__.py  _version.py  apkscan.py  concurrent_executor.py  decompiler.py  included_secret_locators.py  main.py  secret_scanner.py
src/apkscan/secret_locators/: all_secret_locators.json  aws.json  azure.json  cloud.json  curated.json  default.json  endpoint.json  gcp.json  generic.json  key_locators.json  locator_sort.py  secret.json
tests/: conftest.py  fixtures.py  test_apkscan.py  test_decompiler.py  test_secret_scanner.py
