[build-system]
requires = ["setuptools>=42", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Lucas Faudman", email = "lucasfaudman@gmail.com"}]
dynamic = ["classifiers"]
name = "apkscan"
version = "0.2.2"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
description = "Decompile and scan for secrets in .apk, .xapk, .jar, .dex, .class, .smali, .zip, .aar, .arsc, .aab, .jadx.kts files"
keywords = ["secret", "scanner", "jadx", "decompile", "apk", "dex", "jar", "class", "smali", "zip", "aar", "arsc", "aab", "xapk", "jadx.kts"]
dependencies = [
    "enjarify-adapter",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/LucasFaudman/apk-secret-scanner.git"
Repository = "https://github.com/LucasFaudman/apk-secret-scanner.git"

[project.scripts]
apkscan = "apkscan.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["LICENSE"]
"apkscan.secret_locators" = ["*.json", "*.yaml", "*.yml", "*.toml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/apkscan/_version.py"

[tool.black]
line-length = 120
